src/app/home/home.page.scss
main {
  min-height: 60vh;
  @media screen and (min-width: 768px) {
    min-height: 70vh;
  }
}

ion-card {
  min-height: 4rem;
}

ion-card-title {
  color: white;
}

.course-name {
  color: #222222;
}

@media (prefers-color-scheme: dark) {
  .course-name {
    color: #cccccc;
  }
}

.center-text {
  text-align: center;
}

.center-spinner {
  display: block;
  margin: 1rem auto;
}

.small-text {
  color: #aaaaaa;
  a {
    color: #bbbbbb;
  }

  @media (prefers-color-scheme: dark) {
    color: #555555;
    a {
      color: #666666;
    }
  }
}

.hover-card {
  transition: transform 0.2s ease;
  cursor: pointer;
}

.hover-card:hover {
  transform: translateY(-0.5rem) scale(1.02);
}

p {
  padding: 0 1.5rem 0 1.5rem;
  color: gray;
  text-align: center;

  ion-icon {
    margin: 0 0.6em;
    color: gray;
  }

  a {
    cursor: pointer;
  }
}

